user model updation issue

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -14,7 +14,7 @@
 <br>
 </p>               {% if messages %}
                     {% for message in messages %}
-                        <span style="color: green">{{ message }}</span>
+                        <span style="color: red;margin-left: 238px">{{ message }}</span>
                     {% endfor %}
                 {% endif %}
                   <form class="form-horizontal form-without-legend" role="form" method="post" action=".">
