--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -1,78 +1,8 @@
-<!DOCTYPE html>
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
-<!--[if !IE]><!-->
-<html lang="en">
-<!--<![endif]-->
+{% extends 'base.html' %}
+{% block content %}
+    <div class="main">
+  <div class="container ">
 
-<!-- Head BEGIN -->
-
-<head>
-<meta charset="utf-8">
-<title>Source Code Point</title>
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta content="description" name="description">
-<meta content="keywords" name="keywords">
-<meta content="website Name" name="author">
-<link rel="shortcut icon" href="favicon.ico">
-
-<!-- Fonts START -->
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
-<!-- Fonts END -->
-
-<!-- Global styles START -->
-<link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-<link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<!-- Global styles END -->
-
-<!-- Page level plugin styles START -->
-<link href="plugins/fancybox/source/jquery.fancybox.css" rel="stylesheet">
- <link href="plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css">
-<!-- Page level plugin styles END -->
-
-<!-- Theme styles START -->
-<link href="css/components.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/style-responsive.css" rel="stylesheet">
-<link href="css/themes/blue.css" rel="stylesheet" id="style-color">
-<link href="css/custom.css" rel="stylesheet">
-<!-- Theme styles END -->
-</head>
-<!-- Head END -->
-
-<!-- Body BEGIN -->
-<body class="corporate">
-
-<!-- BEGIN HEADER -->
-<div class="header">
-  <div class="container"> <a class="site-logo" href="index.html"><img src="img/logos/logo-corp-red.png" alt="" width="149" height="50"></a> <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a> 
-    
-    <!-- BEGIN NAVIGATION -->
-    <div class="header-navigation pull-left font-transform-inherit">
-         <ul>
-        <li><a  href="index.html">Home</a></li>
-        <li><a href="about-us.html">About Us</a></li>
-        <li class="active"><a href="contact-us.html">Contact Us</a></li>
-        <li><a href="sign-up.html">Sign Up</a></li>
-        <li><a href="login.html">Sign In</a></li>
-      </ul>
-    </div>
-    <!--<div class="pull-right">
-      <ul class="list-unstyled list-inline pull-right margin-top-35">
-        <li><a href="my-profile.html"><i class="fa fa-user "></i> Arpit Harsola</a></li>
-        <li><a href="login.html"><i class="fa fa-lock "></i> Log Out</a></li>
-      </ul>
-    </div>-->
-    
-    <!-- END NAVIGATION --> 
-  </div>
-</div>
-<!-- Header END -->
-
-<div class="main">
-  <div class="container "> 
-    
     <!-- BEGIN CONTENT -->
       <div class="content-page">
         <div class="row">
@@ -104,15 +34,15 @@
                     <li><a href="#" data-original-title="youtube" class="youtube"></a></li>
                   </ul></p>
                   </address>
-                  
-                          
+
+
                 </div>
                 <div class="col-md-9 col-sm-9">
-                
-                
+
+
                   <h2>Inquiry Form</h2>
                   <p>Lorem ipsum dolor sit demo contentLorem ipsum dolor sit demo contentLorem ipsum dolor sit demo contentLorem ipsum dolor sit demo contentLorem ipsum dolor sit demo contentLorem ipsum dolor sit demo contentLorem ipsum dolor sit demo content.</p>
-                  
+
                   <!-- BEGIN FORM-->
                   <form action="#" role="form">
                     <div class="form-group">
@@ -135,64 +65,15 @@
 
                 <div class="col-md-12">
                   <div class="gmaps margin-bottom-40" >
-                  
+
                   </div>
                 </div>
               </div>
       </div>
   </div>
-  <!-- END CONTENT --> 
-  
-  <!-- BEGIN SIDEBAR & CONTENT --> 
-  
+  <!-- END CONTENT -->
+
+  <!-- BEGIN SIDEBAR & CONTENT -->
+
 </div>
-</div>
-
-<!-- BEGIN FOOTER -->
-<div class="footer">
-  <div class="container">
-    <div class="row"> 
-      <!-- BEGIN COPYRIGHT -->
-      <div class="col-md-6 col-sm-6 padding-top-10"> <img src="img/logos/footer-logo.png" width="89" height="30" alt=""> © 2015 Scalable Application Pvt Ltd. <a href="terms-privacy.html">Terms & Privacy</a> | <a href="contact-us.html">Contact Us</a></div>
-      <!-- END COPYRIGHT --> 
-      <!-- BEGIN PAYMENTS -->
-      <div class="col-md-6 col-sm-6">
-        <ul class="social-footer list-unstyled list-inline pull-right">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-        </ul>
-      </div>
-      <!-- END PAYMENTS --> 
-    </div>
-  </div>
-</div>
-<!-- END FOOTER --> 
-
-<!-- Load javascripts at bottom, this will reduce page load time --> 
-<!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) --> 
-<!--[if lt IE 9]>
-    <script src="plugins/respond.min.js"></script>
-    <![endif]--> 
-<script src="plugins/jquery.min.js" type="text/javascript"></script> 
-<script src="plugins/jquery-migrate.min.js" type="text/javascript"></script> 
-<script src="plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script> 
-<script src="scripts/back-to-top.js" type="text/javascript"></script> 
-<!-- END CORE PLUGINS --> 
-
-<!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) --> 
-<script src="plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up --> 
-
-<script src="scripts/layout.js" type="text/javascript"></script> 
-<script type="text/javascript">
-        jQuery(document).ready(function() {
-            Layout.init();    
-            Layout.initTwitter();
-        });
-    </script> 
-<!-- END PAGE LEVEL JAVASCRIPTS -->
-</body>
-<!-- END BODY -->
-</html>
+{% endblock %}
