user model updation issue

--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -12,7 +12,7 @@
               <div class="row margin-bottom-30">
                 <!-- BEGIN INFO BLOCK -->
                 <div class="col-md-12">
-<p> <img src="img/about-img.jpg" class="img-responsive" alt=""></p>
+<p> <img src="/static/img/about-img.jpg" class="img-responsive" alt=""></p>
                   <h2 class="">Company Overview</h2>
                   <p>Lorem Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Lorem Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Lorem Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content</p>
                   <p>Lorem Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Lorem Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Lorem Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Lorem Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content Ipsum dolor site demo content</p>
