--- a/templates/accounts/sign-up.html
+++ b/templates/accounts/sign-up.html
@@ -34,13 +34,13 @@
                 </fieldset>
                 <fieldset>
                   <div class="form-group">
-                    <label  class="col-lg-4 control-label">Mobile <span class="require">*</span></label>
+                    <label  class="col-lg-4 control-label">Mobile <span class="require"></span></label>
                     <div class="col-lg-6">
                       {{ form.mobile }}<span style="color: red" >{{ form.mobile.errors.as_text }}</span>
                     </div>
                   </div>
                   <div class="form-group">
-                    <label  class="col-lg-4 control-label">Skype Id <span class="require">*</span></label>
+                    <label  class="col-lg-4 control-label">Skype Id <span class="require"></span></label>
                     <div class="col-lg-6">
                       {{ form.skypeid }}<span style="color: red" >{{ forms.skypeid.errors.as_text }}</span>
                     </div>
