--- a/templates/accounts/my-profile.html
+++ b/templates/accounts/my-profile.html
@@ -45,7 +45,7 @@
                     </div>
                   </div>
                   <div class="form-group">
-                    <label class="col-lg-4 control-label">Mobile <span class="require">*</span></label>
+                    <label class="col-lg-4 control-label">Mobile <span class="require"></span></label>
                     <div class="col-lg-6">
                       {{ form.mobile }}{{ form.mobile.errors.as_text }}
                     </div>
@@ -56,11 +56,8 @@
                       {{ form.email }}{{ form.email.errors.as_text }}
                     </div>
                   </div>
-
-
-
                   <div class="form-group">
-                    <label class="col-lg-4 control-label">Skype Id <span class="require">*</span></label>
+                    <label class="col-lg-4 control-label">Skype Id <span class="require"></span></label>
                     <div class="col-lg-6">
                       {{ form.skypeid }}{{ form.skypeid.errors.as_text }}
                     </div>
