changed int to biginteger field

--- a/templates/posts/post-your-requarment.html
+++ b/templates/posts/post-your-requarment.html
@@ -80,7 +80,7 @@
                     </div>
                   </div>
                     {% endif %}
-                {% if not user.skypeid == None %}
+                {% if not user.skypeid == '' %}
                     <div class="form-group">
                     <label  class="col-lg-4 control-label">Skype Id </label>
                     <div class="col-lg-6">
