--- a/templates/accounts/my-profile.html
+++ b/templates/accounts/my-profile.html
@@ -49,12 +49,14 @@
                     <div class="col-lg-6">
                       {{ form.mobile }}{{ form.mobile.errors.as_text }}
                     </div>
+                      {% if profile.mobile_verify == False %}<a href="">Verify Mobile Number</a>{% else %}<span style="color: green">Verified</span>{% endif %}
                   </div>
                   <div class="form-group">
                     <label for="email" class="col-lg-4 control-label">Email <span class="require">*</span></label>
                     <div class="col-lg-6">
                       {{ form.email }}{{ form.email.errors.as_text }}
                     </div>
+                      {% if profile.email_verify == False %}<a href="{% url 'send-email' %}">Verify Email</a>{% else %}<span style="color: green">Verified</span>{% endif %}
                   </div>
                   <div class="form-group">
                     <label class="col-lg-4 control-label">Skype Id <span class="require"></span></label>
