--- a/templates/posts/post-your-requarment.html
+++ b/templates/posts/post-your-requarment.html
@@ -39,9 +39,9 @@
                 </fieldset>
                 <fieldset>
                   <div class="form-group">
-                    <label  class="col-lg-4 control-label">Upload Document <span class="require">*</span></label>
+                    <label  class="col-lg-4 control-label">Upload Document <span class="require"></span></label>
                     <div class="col-lg-6">
-                      {{ form.file }}<span style="color: red"> {{ form.file.errors.as_text }}</span>
+                      {{ form.file }}
                     </div>
                   </div>
                   <div class="form-group">
@@ -53,7 +53,7 @@
                   <div class="form-group">
                     <label  class="col-lg-4 control-label">Technology Tags <span class="require">*</span></label>
                     <div class="col-lg-6">
-                      <input class="form-control"  type="text" name="tags" id="tags">
+                      {{ form.tags }}<span style="color: red"> {{ form.tags.errors.as_text }}</span>
                     </div>
                   </div>
                   <div class="form-group">
