--- a/templates/posts/my-posting-detail.html
+++ b/templates/posts/my-posting-detail.html
@@ -6,7 +6,7 @@
       <div class="content-page">
         <div class="row margin-bottom-30 search-result-item border-box">
           <!-- BEGIN INFO BLOCK -->
-          <h2 class="margin-bottom-30">{{ post.title }} <span class="pull-right"><span class="btn-danger btn-lg" >to Buy</span> </span></h2>
+          <h2 class="margin-bottom-30">{{ post.title }} <span class="pull-right"><a href="{% url 'edit-post' post.id %}"> <span class="btn-danger btn-lg" >to Buy</span></a> </span></h2>
           <hr>
           <div class="col-md-12">
 
@@ -14,21 +14,19 @@
             <div class="row front-lists-v1 ">
               <ul class="list-unstyled margin-bottom-20">
                 <li><strong>Category:</strong> {{ post.category }}</li>
-                <li> <strong>Technology Tags:</strong> .Net, HTML, Website, CSS
-
-                  e-Learning, CMS</li>
+                <li> <strong>Technology Tags:</strong>{{ post.tags.all|join:", " }}</li>
                 <li> <strong>Price:</strong> {{ post.get_prices_display }} </li>
-                <li> <strong>Posted On:</strong> 21st March 2015 </li>
-                <li> <strong>Email ID:</strong> Verified </li>
-                <li> <strong>Mobile Number:</strong> Not Verified</li>
+                <li> <strong>Posted On:</strong> {{ post.created_date|date }} </li>
+                <li> <strong>Email ID:</strong> {% if user.email_verify == True %}Verified{% else %}Not Verified{% endif %} </li>
+                <li> <strong>Mobile Number:</strong> {% if user.mobile_verify == True %}Verified{% else %}Not Verified{% endif %}</li>
               </ul>
               <div class="row">
                 <div class="col-md-6 margin-top-20">
                   <blockquote class="border-left-none">
                     <ul class="list-unstyled margin-bottom-0">
                       <li><strong>Email Id:</strong> {{ request.user.email }}</li>
-                      <li> <strong>Mobile Number:</strong> +91-7878288663 </li>
-                      <li> <strong>Skype ID:</strong> scalableapp </li>
+                      <li> <strong>Mobile Number:</strong> {{ user.mobile }} </li>
+                      <li> <strong>Skype ID:</strong> {{ user.skypeid }} </li>
                     </ul>
                   </blockquote>
                 </div>
