--- a/templates/posts/job-detail-after-login.html
+++ b/templates/posts/job-detail-after-login.html
@@ -1,106 +1,23 @@
-<!DOCTYPE html>
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
-<!--[if !IE]><!-->
-<html lang="en">
-<!--<![endif]-->
+{% extends 'base.html' %}
+{% block content %}
+    <div class="main">
+  <div class="container ">
 
-<!-- Head BEGIN -->
-
-<head>
-<meta charset="utf-8">
-<title>Source Code Point</title>
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta content="description" name="description">
-<meta content="keywords" name="keywords">
-<meta content="website Name" name="author">
-<link rel="shortcut icon" href="favicon.ico">
-
-<!-- Fonts START -->
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
-<!-- Fonts END -->
-
-<!-- Global styles START -->
-<link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-<link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<!-- Global styles END -->
-
-<!-- Page level plugin styles START -->
-<link href="plugins/fancybox/source/jquery.fancybox.css" rel="stylesheet">
-<!-- Page level plugin styles END -->
-
-<!-- Theme styles START -->
-<link href="css/components.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/style-responsive.css" rel="stylesheet">
-<link href="css/themes/blue.css" rel="stylesheet" id="style-color">
-<link href="css/custom.css" rel="stylesheet">
-
-<!-- Theme styles END -->
-<style>
-.fancybox-prev {
-	display:none;
-}
-.fancybox-next {
-	display:none;
-}
-</style>
-</head>
-<!-- Head END -->
-
-<!-- Body BEGIN -->
-<body class="corporate">
-<div style="width: auto; height: auto; display: none;" class="fancybox-overlay fancybox-overlay-fixed">
-  <div style="width: 615px; height: auto; position: absolute; top: 20px; left: 404px; overflow: visible;" class="fancybox-wrap fancybox-desktop fancybox-type-image fancybox-opened" tabindex="-1">
-    <div style="padding: 15px; width: auto; height: auto;" class="fancybox-skin"><a title="Close" class="fancybox-item fancybox-close" href="javascript:;"></a></div>
-  </div>
-</div>
-
-<!-- BEGIN HEADER -->
-<div class="header">
-  <div class="container"> <a class="site-logo" href="index.html"><img src="img/logos/logo-corp-red.png" alt="" width="149" height="50"></a> <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a> 
-    
-    <!-- BEGIN NAVIGATION -->
-    <div class="header-navigation pull-left font-transform-inherit">
-      <ul>
-        <li class="active"><a  href="index.html">Home</a></li>
-        <li><a href="my-posting.html">My Posting</a></li>
-        <li><a href="my-interest.html">My Interest</a></li>
-        <li><a href="my-profile.html">My Account</a></li>
-        <li><a href="contact-us.html">Contact Us</a></li>
-      </ul>
-    </div>
-    <div class="pull-right">
-      <ul class="list-unstyled list-inline pull-right margin-top-35">
-        <li><a href="my-profile.html"><i class="fa fa-user "></i> Arpit Harsola</a></li>
-        <li><a href="login.html"><i class="fa fa-lock "></i> Log Out</a></li>
-      </ul>
-    </div>
-    
-    <!-- END NAVIGATION --> 
-  </div>
-</div>
-<!-- Header END -->
-
-<div class="main">
-  <div class="container "> 
-    
     <!-- BEGIN CONTENT -->
 
       <div class="content-page">
-        <div class="row margin-bottom-30 search-result-item border-box"> 
+        <div class="row margin-bottom-30 search-result-item border-box">
           <!-- BEGIN INFO BLOCK -->
           <h2 class="margin-bottom-30">I want to sell e-Learning system source code.....</h2>
           <hr>
-          <div class="col-md-12"> 
-            
+          <div class="col-md-12">
+
             <!-- BEGIN LISTS -->
             <div class="row front-lists-v1 ">
               <ul class="list-unstyled margin-bottom-20">
                 <li><strong>Category:</strong> Web Application</li>
                 <li> <strong>Technology Tags:</strong> .Net, HTML, Website, CSS
-                  
+
                   e-Learning, CMS</li>
                 <li> <strong>Price:</strong> $500 to $750 </li>
                 <li> <strong>Posted On:</strong> 21st March 2015 </li>
@@ -111,9 +28,9 @@
                 <div class="col-md-6 margin-top-20">
                   <blockquote>
                     <p> Click here to get contact
-                      
+
                       information of usre
-                      
+
                       (Email ID, Mobile number & Skype ID) </p>
                     <a href="#" class="fancybox-button btn btn-primary"  data-rel="fancybox-button">Get Contact Detail</a></blockquote>
                 </div>
@@ -126,7 +43,7 @@
             </div>
           </div>
           <!-- END LISTS -->
-          
+
           <div class="testimonials-v1 margin-top-20">
             <div>
               <h3>Discription</h3>
@@ -147,9 +64,9 @@
             <div class="col-md-6">
               <blockquote>
                 <p> Click here to get contact
-                  
+
                   information of usre
-                  
+
                   (Email ID, Mobile number & Skype ID) </p>
                 <a href="#" class="fancybox-button btn btn-primary"  data-rel="fancybox-button">Get Contact Detail</a></blockquote>
             </div>
@@ -160,63 +77,14 @@
             </div>
           </div>
         </div>
-        <!-- END INFO BLOCK --> 
-        
+        <!-- END INFO BLOCK -->
+
       </div>
 
   </div>
-  <!-- END CONTENT --> 
-  
-  <!-- BEGIN SIDEBAR & CONTENT --> 
-  
+  <!-- END CONTENT -->
+
+  <!-- BEGIN SIDEBAR & CONTENT -->
+
 </div>
-</div>
-
-<!-- BEGIN FOOTER -->
-<div class="footer">
-  <div class="container">
-    <div class="row"> 
-      <!-- BEGIN COPYRIGHT -->
-      <div class="col-md-6 col-sm-6 padding-top-10"> <img src="img/logos/footer-logo.png" width="89" height="30" alt=""> © 2015 Scalable Application Pvt Ltd. <a href="terms-privacy.html">Terms & Privacy</a> | <a href="contact-us.html">Contact Us</a></div>
-      <!-- END COPYRIGHT --> 
-      <!-- BEGIN PAYMENTS -->
-      <div class="col-md-6 col-sm-6">
-        <ul class="social-footer list-unstyled list-inline pull-right">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-        </ul>
-      </div>
-      <!-- END PAYMENTS --> 
-    </div>
-  </div>
-</div>
-<!-- END FOOTER --> 
-
-<!-- Load javascripts at bottom, this will reduce page load time --> 
-<!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) --> 
-<!--[if lt IE 9]>
-    <script src="plugins/respond.min.js"></script>
-    <![endif]--> 
-<script src="plugins/jquery.min.js" type="text/javascript"></script> 
-<script src="plugins/jquery-migrate.min.js" type="text/javascript"></script> 
-<script src="plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script> 
-<script src="scripts/back-to-top.js" type="text/javascript"></script> 
-<!-- END CORE PLUGINS --> 
-
-<!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) --> 
-<script src="plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up --> 
-
-<script src="scripts/layout.js" type="text/javascript"></script> 
-<script type="text/javascript">
-        jQuery(document).ready(function() {
-            Layout.init();    
-            Layout.initTwitter();
-        });
-    </script> 
-<!-- END PAGE LEVEL JAVASCRIPTS -->
-</body>
-<!-- END BODY -->
-</html>
+{% endblock %}
