--- a/templates/posts/category-posts.html
+++ b/templates/posts/category-posts.html
@@ -25,8 +25,8 @@
         <div>
           <div class="main-tab">
             <ul class="nav nav-tabs">
-              <li {% if type == 'sell' %}class="active"{% endif %}> <a href="{% url 'category-post' selected_cat sell %}"  aria-expanded="true"> Source Code On Sell </a> </li>
-              <li {% if type == 'buy' %}class="active"{% endif %}> <a href="{% url 'category-post' selected_cat buy %}"  aria-expanded="false"> Soure Code On Buy </a> </li>
+              <li {% if type == 'sell' %}class="active"{% endif %}> <a href=""  aria-expanded="true"> Source Code On Sell </a> </li>
+              <li {% if type == 'buy' %}class="active"{% endif %}> <a href=""  aria-expanded="false"> Soure Code On Buy </a> </li>
             </ul>
           </div>
           <div class="tab-content">
