--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
       <ul>
         <li {% ifequal request.path '/' %}class="active"{% endifequal %}><a  href="/">Home</a></li>
       {% if request.user.is_authenticated %}
-          <li><a href="{% url 'my-posting' %}">My Posting</a></li>
+          <li {% ifequal request.path '/my-posting/' %}class="active"{% endifequal %}><a href="{% url 'my-posting' %}">My Posting</a></li>
           <li><a href="my-interest.html">My Interest</a></li>
           <li {% ifequal request.path '/accounts/update-profile/' %}class="active"{% endifequal %}><a  href="{% url 'update-profile' %}">My Account</a></li>
 
