--- a/templates/posts/update-post.html
+++ b/templates/posts/update-post.html
@@ -53,7 +53,7 @@
                   <div class="form-group">
                     <label  class="col-lg-4 control-label">Technology Tags <span class="require">*</span></label>
                     <div class="col-lg-6">
-                      {{ form.tags }}<span style="color: red"> {{ form.tags.errors.as_text }}</span>
+                      <input class="form-control" id="id_tags" maxlength="500" name="tags" type="text" value="{{ post.tags.all|join:", " }}"><span style="color: red"> {{ form.tags.errors.as_text }}</span>
                     </div>
                   </div>
                   <div class="form-group">
