--- a/templates/posts/my-posting.html
+++ b/templates/posts/my-posting.html
@@ -22,7 +22,7 @@
 <div class="content-page">
     {% for post in posts_buy %}
         <div class="search-result-item">
-          <a href="{% url 'post-detail' post.id %}"><h4>{{ post.title }}</h4>
+          <a href="{% url 'posting-detail' post.id %}"><h4>{{ post.title }}</h4>
           <ul class="blog-info">
             <li><i class="fa fa-calendar"></i> {{ post.created_date }}</li>
             <li><i class="fa fa-dollar"></i> {{ post.get_prices_display }}</li>
@@ -43,7 +43,7 @@
 
          {% for post in posts_sell %}
         <div class="search-result-item">
-          <a href="{% url 'post-detail' post.id %}"><h4>{{ post.title }}</h4>
+          <a href="{% url 'posting-detail' post.id %}"><h4>{{ post.title }}</h4>
           <ul class="blog-info">
             <li><i class="fa fa-calendar"></i> {{ post.created_date }}</li>
             <li><i class="fa fa-dollar"></i> {{ post.get_prices_display }}</li>
