modules for listing,edit,deleting posts of logged in users

--- a/templates/posts/job-detail-after-login.html
+++ b/templates/posts/job-detail-after-login.html
@@ -32,7 +32,7 @@
                       information of usre
 
                       (Email ID, Mobile number & Skype ID) </p>
-                    <a href="#" class="fancybox-button btn btn-primary"  data-rel="fancybox-button">Get Contact Detail</a></blockquote>
+                    <a href="{% url 'post-contact' post.slug %}" class="btn btn-primary">Get Contact Detail</a></blockquote>
                 </div>
                 <div class="col-md-6 padding-left-0 margin-top-20">
                   <blockquote>
@@ -67,12 +67,12 @@
                   information of usre
 
                   (Email ID, Mobile number & Skype ID) </p>
-                <a href="#" class="fancybox-button btn btn-primary"  data-rel="fancybox-button">Get Contact Detail</a></blockquote>
+                <a href="{% url 'post-contact' post.slug %}" class="btn btn-primary">Get Contact Detail</a></blockquote>
             </div>
             <div class="col-md-6">
               <blockquote>
                 <p> Click here to send your contact detail to user, to show your interest, user will soon contact you </p>
-                <a href="#" class="fancybox-button btn btn-primary"  data-rel="fancybox-button">Show Interest</a></blockquote>
+                <a href="" class="fancybox-button btn btn-primary"  data-rel="fancybox-button">Show Interest</a></blockquote>
             </div>
           </div>
         </div>
